build: atualizado a versão do spring boot